<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="bottom"
        android:paddingStart="0dp"
        android:paddingEnd="32dp"
        android:paddingBottom="12dp"
        android:textAlignment="textEnd"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="0" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buton7"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="@string/_7"
            android:textSize="16sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/buton8"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="@string/_8"
            android:textSize="16sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/buton9"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="@string/_9"
            android:textSize="16sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/butonSil"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="@string/delete"
            android:textColor="@color/orange"
            android:textSize="16sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/buton4"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="@string/_4"
            android:textSize="16sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/buton5"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="@string/_5"
            android:textSize="16sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/buton6"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="@string/_6"
            android:textSize="16sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/butonTemizle"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="@string/clear"
            android:textColor="@color/orange"
            android:textSize="16sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/buton1"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="@string/_1"
            android:textSize="16sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/buton2"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="@string/_2"
            android:textSize="16sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/buton3"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="@string/_3"
            android:textSize="16sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/butonTopla"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="@string/plus_sign"
            android:textColor="@color/orange"
            android:textSize="16sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/buton0"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="@string/_0"
            android:textSize="16sp"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/butonSonuc"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@color/white"
            android:text="@string/equals_sign"
            android:textColor="@color/orange"
            android:textSize="16sp"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />


    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>